# EBA-aula02-ProbabilidadeEDistribuicao

./: README.md  pyproject.toml
exemplos-de-aula/: aula 2.xlsx
exercicios/: 2. Probabilidade e distribuição.docx  Aula 2. Lista prática - teorema limite central e zscore .docx
notebooks/: Distribuição.ipynb
