[tool.poetry]
name = "aula02-probabilidadeedistribuicao"
version = "0.1.0"
description = ""
authors = ["VanGaigher <vanessa.mat.sedu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.11"
scipy = "^1.14.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
numpy = "^2.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
